changed language to french

--- a/packages/accounts-ui-unstyled/login_buttons_dropdown.html
+++ b/packages/accounts-ui-unstyled/login_buttons_dropdown.html
@@ -9,7 +9,7 @@
 
     {{#if dropdownVisible}}
       <div id="login-dropdown-list" class="accounts-dialog">
-        <a class="login-close-text">Close</a>
+        <a class="login-close-text">Fermer</a>
         <div class="login-close-text-clear"></div>
 
         {{#if inMessageOnlyFlow}}
@@ -48,9 +48,9 @@
     {{#if dropdownVisible}}
       {{! This text is covered by the dropdown, but duplicating it here
           makes the position of "Close" match the position of this text. }}
-      <a class="login-link-text" id="login-sign-in-link">Sign in ▾</a>
+      <a class="login-link-text" id="login-sign-in-link">S'authentifier ▾</a>
       <div id="login-dropdown-list" class="accounts-dialog">
-        <a class="login-close-text">Close</a>
+        <a class="login-close-text">Fermer</a>
         {{#if loggingIn}}
           {{> _loginButtonsLoggingIn}}
         {{/if}}
@@ -62,7 +62,7 @@
         {{! Not normally visible, but if the user closes the dropdown during login.}}
         {{> _loginButtonsLoggingIn}}
       {{else}}
-        <a class="login-link-text" id="login-sign-in-link">Sign in ▾</a>
+        <a class="login-link-text" id="login-sign-in-link">S'authentifier ▾</a>
       {{/if}}
     {{/if}}
   </div>
@@ -152,7 +152,7 @@
 
 <template name="_loginButtonsBackToLoginLink">
   <div class="additional-link-container">
-    <a id="back-to-login-link" class="additional-link">Sign in</a>
+    <a id="back-to-login-link" class="additional-link">S'authentifier</a>
   </div>
 </template>
 
