--- a/packages/accounts-ui-unstyled/login_buttons_single.html
+++ b/packages/accounts-ui-unstyled/login_buttons_single.html
@@ -4,7 +4,7 @@
          id="login-buttons-{{name}}">
       <div class="login-image" id="login-buttons-image-{{name}}"></div>
       {{#if configured}}
-        <span class="text-besides-image sign-in-text-{{name}}">Sign in with {{capitalizedName}}</span>
+        <span class="text-besides-image sign-in-text-{{name}}">S'authentifier avec {{capitalizedName}}</span>
       {{else}}
         <span class="text-besides-image configure-text-{{name}}">Configure {{capitalizedName}} Login</span>
       {{/if}}
