Changed language to french

--- a/packages/accounts-ui-unstyled/login_buttons_dialogs.html
+++ b/packages/accounts-ui-unstyled/login_buttons_dialogs.html
@@ -14,7 +14,7 @@
 
     <div class="accounts-dialog accounts-centered-dialog">
       <label id="reset-password-new-password-label" for="reset-password-new-password">
-        New password
+        Nouveau mot de passe
       </label>
 
       <div>
@@ -24,7 +24,7 @@
       {{> _loginButtonsMessages}}
 
       <div class="login-button login-button-form-submit" id="login-buttons-reset-password-button">
-        Set password
+        Confirmer le mot de passe
       </div>
 
       <a class="accounts-close" id="login-buttons-cancel-reset-password">&times;</a>
@@ -38,7 +38,7 @@
 
     <div class="accounts-dialog accounts-centered-dialog">
       <label id="enroll-account-password-label" for="enroll-account-password">
-        Choose a password
+        Choisissez un mot de passe
       </label>
 
       <div>
@@ -48,7 +48,7 @@
       {{> _loginButtonsMessages}}
 
       <div class="login-button login-button-form-submit" id="login-buttons-enroll-account-button">
-        Create account
+        Créer un compte
       </div>
 
       <a class="accounts-close" id="login-buttons-cancel-enroll-account">&times;</a>
