--- a/packages/accounts-ui-unstyled/login_buttons_dropdown.html
+++ b/packages/accounts-ui-unstyled/login_buttons_dropdown.html
@@ -29,12 +29,12 @@
 <template name="_loginButtonsLoggedInDropdownActions">
   {{#if allowChangingPassword}}
     <div class="login-button" id="login-buttons-open-change-password">
-      Change password
+      Changer le mot de passe
     </div>
   {{/if}}
 
   <div class="login-button" id="login-buttons-logout">
-    Sign out
+    Se déconnecter
   </div>
 
   {{> _loginButtonsMessages}}
@@ -106,22 +106,22 @@
 
       <div class="login-button login-button-form-submit" id="login-buttons-password">
         {{#if inSignupFlow}}
-          Create account
+          Créer un compte
         {{else}}
-          Sign in
+          S'authentifier
         {{/if}}
       </div>
 
       {{#if inLoginFlow}}
         {{#if showCreateAccountLink}}
           <div class="additional-link-container">
-            <a id="signup-link" class="additional-link">Create account</a>
+            <a id="signup-link" class="additional-link">Créer un compte</a>
           </div>
         {{/if}}
 
         {{#if showForgotPasswordLink}}
           <div class="additional-link-container">
-            <a id="forgot-password-link" class="additional-link">Forgot password</a>
+            <a id="forgot-password-link" class="additional-link">Mot de passe oublié</a>
           </div>
         {{/if}}
       {{/if}}
@@ -136,14 +136,14 @@
 <template name="_forgotPasswordForm">
   <div class="login-form">
     <div id="forgot-password-email-label-and-input"> {{! XXX we should probably use loginButtonsFormField }}
-      <label id="forgot-password-email-label" for="forgot-password-email">Email</label>
+      <label id="forgot-password-email-label" for="forgot-password-email">Courriel</label>
       <input id="forgot-password-email" type="email"/>
     </div>
 
     {{> _loginButtonsMessages}}
 
     <div class="login-button login-button-form-submit" id="login-buttons-forgot-password">
-      Reset password
+      Réinitialiser le mot de passe
     </div>
 
     {{> _loginButtonsBackToLoginLink}}
